--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <version>4.3.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.19.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
